--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -15,7 +15,8 @@
       {
         "name": "postgres-ts-plugin",
         "options": {
-          "host": "localhost"
+          "host": "localhost",
+          "database": "surfor"
         }
       }
     ]
