--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "clean": "rm -rf dist rest server/dist server/routers"
   },
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
+    "debug": "^4.3.1",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "feather-icons": "^4.28.0",
+    "nanoid": "^3.1.20",
+    "postgres": "^2.0.0-beta.2",
     "vue": "^3.0.2",
     "vue-feather": "^1.1.1",
     "vue-promised": "^2.0.2",
@@ -19,8 +26,14 @@
   },
   "devDependencies": {
     "@rollup/plugin-proxy": "file:../marshal/dist",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.8",
+    "@types/debug": "^4.1.5",
+    "@types/express-session": "^1.17.3",
     "@vue/compiler-sfc": "^3.0.2",
     "bootstrap": "^4.5.3",
+    "nodemon": "^2.0.6",
+    "postgres-ts-plugin": "file:../postgres-ts-plugin",
     "rollup": "^2.33.1",
     "rollup-plugin-typescript2": "^0.29.0",
     "typescript": "^4.1.2",
